# etl_pipelines

./: pyproject.toml
data_models/active_campaign/: campaign_messages_report.py  contact_lists_subscribe.py  contact_tags.py  contacts_dimension.py  dim_campaign.py  dim_campaign_link.py  dim_campaign_message.py  dim_list.py  fact_list_update.py  links_report.py  messages_dimension.py  rpt_campaign.py  tags_dimension.py
data_models/facebook/: posts.py  video_titles.py  videos.py
data_models/fake_google/: app_report_month.py
data_models/google_analytics/: app_report_day.py  app_report_day_country.py  app_report_month.py  app_report_month_country.py  app_report_quarter.py  app_report_quarter_country.py  app_report_week.py  app_report_week_country.py  app_report_year.py  app_report_year_country.py  events_by_country.py  events_report.py  standard_report.py  standard_report_country.py  standard_report_summary.py  standard_report_summary_country.py
data_models/instagram/: video_titles.py  videos.py
data_models/omny/: clip_consumption.py  clips.py  consumption.py  programs.py
data_models/raisers_edge/: constituent_email.py  constituent_phone.py  constituent_primary_address_country.py  (+4 more)
etl_common/: cast_datatypes.py  check_stage_empty.py  create_tables.py  extract.py  extract_parquet.py  fetch_raw_filepaths.py  load_to_stage.py  merge_to_target.py  move_file.py  parquet_reader.py  quarantine_file.py  validate_to_stage.py
etl_pipelines/: __init__.py  base_download_runner.py  extract.py  fetch_files.py  parquet_reader.py
transformations/: extract.py  stage.py
(+160 files in other folders)
