[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "source_downloads"
version = "1.0.0"
description = "Dummy ETL pipeline package for Airflow DAG factory exploration"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["source_downloads*"]